--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^4.35.7",
+    "@trpc/client": "^10.38.5",
+    "@trpc/react-query": "^10.38.5",
+    "@trpc/server": "^10.38.5",
     "@vercel/kv": "^0.2.3",
     "ai": "^2.2.13",
     "class-variance-authority": "^0.7.0",
@@ -35,7 +39,8 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "use-sync-external-store": "^1.2.0",
-    "xstate": "^5.0.0-beta.31"
+    "xstate": "^5.0.0-beta.31",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/node": "latest",
