--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "use-sync-external-store": "^1.2.0",
+    "uuidv7": "^0.6.3",
     "xstate": "^5.0.0-beta.31",
     "zod": "^3.22.2"
   },
