--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
@@ -34,6 +35,7 @@
     "lucide-react": "^0.279.0",
     "nanostores": "^0.9.3",
     "next": "latest",
+    "next-themes": "^0.2.1",
     "openai": "^4.10.0",
     "react": "latest",
     "react-dom": "latest",
