--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "nanostores": "^0.9.3",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
+    "next-usequerystate": "^1.9.1",
     "openai": "^4.10.0",
     "react": "latest",
     "react-dom": "latest",
