--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "@trpc/react-query": "^10.38.5",
     "@trpc/server": "^10.38.5",
     "@types/readable-stream": "^4.0.4",
-    "@vercel/blob": "^0.15.0",
+    "@vercel/blob": "^0.15.1",
     "@vercel/kv": "^0.2.3",
+    "@vercel/og": "^0.5.20",
     "@vitejs/plugin-react": "^4.1.0",
     "ai": "^2.2.13",
     "class-variance-authority": "^0.7.0",
@@ -57,11 +58,13 @@
     "openai": "^4.10.0",
     "react": "latest",
     "react-dom": "latest",
+    "react-spring-carousel": "^2.0.19",
     "react-viewport-hooks": "^1.5.0",
     "replicate": "^0.20.1",
     "rxjs": "^7.8.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "tus-js-client": "^3.1.1",
     "use-sync-external-store": "^1.2.0",
     "uuidv7": "^0.6.3",
     "vite-tsconfig-paths": "^4.2.1",
