--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "next-themes": "^0.2.1",
     "next-usequerystate": "^1.9.1",
     "openai": "^4.10.0",
+    "posthog-node": "^3.1.3",
     "react": "latest",
     "react-dom": "latest",
     "react-spring-carousel": "^2.0.19",
