--- a/package.json
+++ b/package.json
@@ -59,10 +59,10 @@
     "posthog-node": "^3.1.3",
     "react": "latest",
     "react-dom": "latest",
-    "react-spring-carousel": "^2.0.19",
     "react-viewport-hooks": "^1.5.0",
     "replicate": "^0.20.1",
     "rxjs": "^7.8.1",
+    "swiper": "^11.0.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "tus-js-client": "^3.1.1",
