--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@trpc/react-query": "^10.38.5",
     "@trpc/server": "^10.38.5",
     "@types/readable-stream": "^4.0.4",
+    "@use-gesture/react": "^10.3.0",
     "@vercel/blob": "^0.15.1",
     "@vercel/kv": "^0.2.3",
     "@vercel/og": "^0.5.20",
@@ -60,9 +61,11 @@
     "posthog-node": "^3.1.3",
     "react": "latest",
     "react-dom": "latest",
+    "react-spring": "^9.7.3",
     "react-viewport-hooks": "^1.5.0",
     "replicate": "^0.20.1",
     "rxjs": "^7.8.1",
+    "screenfull": "^6.0.2",
     "swiper": "^11.0.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
