--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "encoding": "^0.1.13",
     "event-source-polyfill": "^1.0.31",
     "eventsource": "^2.0.2",
+    "framer-motion": "^10.16.5",
     "https": "^1.0.0",
     "ioredis": "^5.3.2",
     "js-yaml": "^4.1.0",
