--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@sanity/eventsource": "^5.0.1",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
     "@tanstack/react-query": "^4.35.7",
     "@testing-library/react": "^14.0.0",
     "@trpc/client": "^10.38.5",
