--- a/package.json
+++ b/package.json
@@ -57,13 +57,13 @@
     "langchain": "^0.0.173",
     "lucide-react": "^0.279.0",
     "nanostores": "^0.9.3",
-    "next": "^13.5.6",
+    "next": "^14.0.3",
     "next-themes": "^0.2.1",
     "next-usequerystate": "^1.9.1",
     "openai": "^4.10.0",
     "posthog-node": "^3.1.3",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-spring": "^9.7.3",
     "react-viewport-hooks": "^1.5.0",
     "replicate": "^0.20.1",
@@ -100,7 +100,7 @@
     "@types/use-sync-external-store": "^0.0.4",
     "autoprefixer": "latest",
     "eslint": "latest",
-    "eslint-config-next": "latest",
+    "eslint-config-next": "^14.0.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-storybook": "^0.6.15",
     "jsdom": "^22.1.0",
