--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "openai": "^4.10.0",
     "posthog-node": "^3.1.3",
     "react": "^18.2.0",
+    "react-diff-viewer": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-spring": "^9.7.3",
     "react-viewport-hooks": "^1.5.0",
