--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@sanity/eventsource": "^5.0.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
@@ -101,6 +102,7 @@
     "@types/react-dom": "latest",
     "@types/use-sync-external-store": "^0.0.4",
     "autoprefixer": "latest",
+    "daisyui": "^4.4.10",
     "eslint": "latest",
     "eslint-config-next": "^14.0.3",
     "eslint-config-prettier": "^9.0.0",
