--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "generate-database-types": "supabase gen types typescript --project-id umxskkqubhkoowxwdrvq --schema public > src/lib/database.types.ts",
     "test": "vitest"
   },
   "dependencies": {
@@ -31,6 +32,9 @@
     "@sanity/eventsource": "^5.0.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/ssr": "^0.0.10",
+    "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^4.35.7",
     "@testing-library/react": "^14.0.0",
     "@trpc/client": "^10.38.5",
@@ -112,6 +116,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "storybook": "^7.4.6",
+    "supabase": "^1.115.4",
     "tailwindcss": "latest",
     "typescript": "latest",
     "vitest": "^0.34.6"
