--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "generate": "drizzle-kit generate:pg",
     "generate-database-types": "supabase gen types typescript --project-id umxskkqubhkoowxwdrvq --schema public > src/lib/database.types.ts",
     "test": "vitest"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^0.3.9",
     "@clerk/nextjs": "^4.25.4",
     "@ctrl/react-adsense": "^1.7.0",
     "@nanostores/react": "^0.7.1",
@@ -45,12 +47,15 @@
     "@vercel/blob": "^0.15.1",
     "@vercel/kv": "^0.2.3",
     "@vercel/og": "^0.5.20",
+    "@vercel/postgres": "^0.5.1",
     "@vitejs/plugin-react": "^4.1.0",
     "ai": "^2.2.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.29.0",
+    "drizzle-zod": "^0.5.1",
     "encoding": "^0.1.13",
     "event-source-polyfill": "^1.0.31",
     "eventsource": "^2.0.2",
@@ -67,6 +72,8 @@
     "next-themes": "^0.2.1",
     "next-usequerystate": "^1.9.1",
     "openai": "^4.10.0",
+    "pg": "^8.11.3",
+    "postgres": "^3.4.3",
     "posthog-node": "^3.1.3",
     "react": "^18.2.0",
     "react-diff-viewer": "^3.1.1",
@@ -107,6 +114,7 @@
     "@types/use-sync-external-store": "^0.0.4",
     "autoprefixer": "latest",
     "daisyui": "^4.4.10",
+    "drizzle-kit": "^0.20.6",
     "eslint": "latest",
     "eslint-config-next": "^14.0.3",
     "eslint-config-prettier": "^9.0.0",
