--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@auth/drizzle-adapter": "^0.3.9",
     "@clerk/nextjs": "^4.25.4",
     "@ctrl/react-adsense": "^1.7.0",
+    "@hookform/resolvers": "^3.3.2",
     "@nanostores/react": "^0.7.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -75,10 +76,13 @@
     "react": "^18.2.0",
     "react-diff-viewer": "^3.1.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-spring": "^9.7.3",
     "react-viewport-hooks": "^1.5.0",
     "replicate": "^0.20.1",
+    "resend": "^2.0.0",
     "rxjs": "^7.8.1",
+    "schema-dts": "^1.1.2",
     "screenfull": "^6.0.2",
     "swiper": "^11.0.5",
     "tailwind-merge": "^1.14.0",
@@ -88,7 +92,7 @@
     "uuidv7": "^0.6.3",
     "vite-tsconfig-paths": "^4.2.1",
     "xstate": "^5.0.0-beta.31",
-    "zod": "^3.22.2",
+    "zod": "^3.22.4",
     "zod-to-json-schema": "^3.21.4"
   },
   "devDependencies": {
