remix updates and autocomplete email

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "diff-match-patch": "^1.0.5",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.1",
     "drizzle-zod": "^0.5.1",
@@ -105,6 +106,7 @@
     "@storybook/react": "^7.4.6",
     "@storybook/testing-library": "^0.2.2",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/diff-match-patch": "^1.0.36",
     "@types/event-source-polyfill": "^1.0.2",
     "@types/eventsource": "^1.1.12",
     "@types/js-yaml": "^4.0.6",
