--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "openai": "^4.10.0",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
+    "posthog-js": "^1.93.6",
     "posthog-node": "^3.1.3",
     "react": "^18.2.0",
     "react-diff-viewer": "^3.1.1",
