--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "rxjs": "^7.8.1",
     "schema-dts": "^1.1.2",
     "screenfull": "^6.0.2",
+    "sharp": "^0.33.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
