--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@clerk/nextjs": "^4.25.4",
     "@ctrl/react-adsense": "^1.7.0",
     "@hookform/resolvers": "^3.3.2",
+    "@img/sharp-linux-x64": "^0.33.0",
     "@nanostores/react": "^0.7.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
