--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@sanity/eventsource": "^5.0.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^4.35.7",
     "@testing-library/react": "^14.0.0",
     "@trpc/client": "^10.38.5",
