--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "schema-dts": "^1.1.2",
     "screenfull": "^6.0.2",
     "sharp": "^0.32.0",
+    "stripe": "^14.7.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
