--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "nanostores": "^0.9.3",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "next-usequerystate": "^1.9.1",
     "openai": "^4.10.0",
