--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@vercel/blob": "^0.15.1",
     "@vercel/kv": "^0.2.3",
     "@vercel/og": "^0.5.20",
+    "@vercel/otel": "^0.3.0",
     "@vercel/postgres": "^0.5.1",
     "@vitejs/plugin-react": "^4.1.0",
     "ai": "^2.2.13",
