--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "bowser": "^2.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cookie": "^0.6.0",
     "diff-match-patch": "^1.0.5",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.1",
@@ -68,6 +69,7 @@
     "framer-motion": "^10.16.5",
     "https": "^1.0.0",
     "ioredis": "^5.3.2",
+    "jose": "^5.1.3",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.0.173",
@@ -94,6 +96,7 @@
     "rxjs": "^7.8.1",
     "schema-dts": "^1.1.2",
     "screenfull": "^6.0.2",
+    "set-cookie-parser": "^2.6.0",
     "sharp": "^0.32.0",
     "stripe": "^14.7.0",
     "swiper": "^11.0.5",
@@ -117,6 +120,7 @@
     "@storybook/react": "^7.4.6",
     "@storybook/testing-library": "^0.2.2",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/cookie": "^0.6.0",
     "@types/diff-match-patch": "^1.0.36",
     "@types/event-source-polyfill": "^1.0.2",
     "@types/eventsource": "^1.1.12",
@@ -125,6 +129,7 @@
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/set-cookie-parser": "^2.4.7",
     "@types/use-sync-external-store": "^0.0.4",
     "autoprefixer": "latest",
     "daisyui": "^4.4.10",
