--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-spring": "^9.7.3",
+    "react-twc": "^1.0.1",
     "react-viewport-hooks": "^1.5.0",
     "replicate": "^0.20.1",
     "resend": "^2.0.0",
