keyboard input and markdown for answers

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.0.173",
     "lucide-react": "^0.279.0",
+    "marked": "^11.1.0",
     "nanostores": "^0.9.3",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
