--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-diff-viewer": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
     "react-spring": "^9.7.3",
     "react-twc": "^1.0.1",
     "react-viewport-hooks": "^1.5.0",
