--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "use-sync-external-store": "^1.2.0",
     "uuidv7": "^0.6.3",
     "vite-tsconfig-paths": "^4.2.1",
-    "xstate": "^5.0.0-beta.31",
+    "xstate": "^5.4.1",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.21.4"
   },
