--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "react-twc": "^1.2.2",
     "react-viewport-hooks": "^1.5.0",
     "replicate": "^0.20.1",
+    "reselect": "^5.0.1",
     "resend": "^2.0.0",
     "rxjs": "^7.8.1",
     "schema-dts": "^1.1.2",
