--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ yarn-error.log*
 next-env.d.ts
 
 .env*
+
+# next-pwa
+**/public/workbox**
+**/public/sw**
+**/public/worker**
+**/public/fallback**
+**/public/precache**
