--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "use-sync-external-store": "^1.2.0",
     "uuidv7": "^0.6.3",
     "vite-tsconfig-paths": "^4.2.1",
+    "web-push": "^3.6.6",
     "workbox-window": "^7.0.0",
     "xstate": "^5.4.1",
     "zod": "^3.22.4",
@@ -136,6 +137,7 @@
     "@types/react-dom": "latest",
     "@types/set-cookie-parser": "^2.4.7",
     "@types/use-sync-external-store": "^0.0.4",
+    "@types/web-push": "^3.6.3",
     "autoprefixer": "latest",
     "daisyui": "^4.4.10",
     "drizzle-kit": "^0.20.6",
