--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-spring/web": "^9.7.3",
     "@sanity/eventsource": "^5.0.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
@@ -93,6 +94,7 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-spring": "^9.7.3",
+    "react-swipeable": "^7.0.1",
     "react-twc": "^1.2.2",
     "react-viewport-hooks": "^1.5.0",
     "replicate": "^0.20.1",
