add assistant back, filters and sort on me pages

--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,11 @@
     "src/app/**/*": {
       "maxDuration": 300
     }
-  }
+  },
+  "cron": [
+    {
+      "path": "/api/cron/onboarding",
+      "schedule": "* * * * *"
+    }
+  ]
 }
