--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "encoding": "^0.1.13",
     "event-source-polyfill": "^1.0.31",
     "eventsource": "^2.0.2",
+    "fast-json-patch": "^3.1.1",
     "framer-motion": "^10.18.0",
     "https": "^1.0.0",
     "ioredis": "^5.3.2",
@@ -85,6 +86,8 @@
     "next-usequerystate": "^1.9.1",
     "observable-hooks": "^4.2.3",
     "openai": "^4.10.0",
+    "partykit": "^0.0.87",
+    "partysocket": "^0.0.25",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
     "posthog-js": "^1.93.6",
