--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "react-spring": "^9.7.3",
     "react-swipeable": "^7.0.1",
     "react-twc": "^1.2.2",
+    "react-use-gesture": "^9.1.3",
     "react-viewport-hooks": "^1.5.0",
     "replicate": "^0.20.1",
     "reselect": "^5.1.0",
