--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "fast-json-patch": "^3.1.1",
     "framer-motion": "^10.18.0",
     "https": "^1.0.0",
+    "immer": "^10.0.3",
     "ioredis": "^5.3.2",
     "jose": "^5.1.3",
     "js-yaml": "^4.1.0",
