--- a/package.json
+++ b/package.json
@@ -69,8 +69,10 @@
     "encoding": "^0.1.13",
     "event-source-polyfill": "^1.0.31",
     "eventsource": "^2.0.2",
+    "fast-json-patch": "^3.1.1",
     "framer-motion": "^10.18.0",
     "https": "^1.0.0",
+    "immer": "^10.0.3",
     "ioredis": "^5.3.2",
     "jose": "^5.1.3",
     "js-yaml": "^4.1.0",
@@ -85,6 +87,8 @@
     "next-usequerystate": "^1.9.1",
     "observable-hooks": "^4.2.3",
     "openai": "^4.10.0",
+    "partykit": "^0.0.97",
+    "partysocket": "^0.0.25",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
     "posthog-js": "^1.93.6",
@@ -97,6 +101,7 @@
     "react-spring": "^9.7.3",
     "react-swipeable": "^7.0.1",
     "react-twc": "^1.2.2",
+    "react-use-gesture": "^9.1.3",
     "react-viewport-hooks": "^1.5.0",
     "replicate": "^0.20.1",
     "reselect": "^5.1.0",
@@ -106,7 +111,7 @@
     "screenfull": "^6.0.2",
     "set-cookie-parser": "^2.6.0",
     "sharp": "^0.32.0",
-    "sonner": "^1.3.1",
+    "sonner": "^1.4.0",
     "stripe": "^14.7.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^1.14.0",
@@ -146,7 +151,7 @@
     "@types/web-push": "^3.6.3",
     "autoprefixer": "latest",
     "daisyui": "^4.4.10",
-    "drizzle-kit": "^0.20.6",
+    "drizzle-kit": "^0.20.14",
     "eslint": "latest",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.0.0",
