--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "swiper": "^11.0.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-displaymodes": "^1.0.8",
     "tus-js-client": "^3.1.1",
     "tw-to-css": "^0.0.12",
     "use-sync-external-store": "^1.2.0",
