--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "posthog-js": "^1.93.6",
     "posthog-node": "^3.1.3",
     "react": "^18.2.0",
+    "react-aria": "^3.32.1",
     "react-diff-viewer": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
