--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-twc": "^1.2.2",
     "react-use-gesture": "^9.1.3",
     "react-viewport-hooks": "^1.5.0",
+    "remeda": "^1.58.2",
     "replicate": "^0.20.1",
     "reselect": "^5.1.0",
     "resend": "^2.0.0",
