--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "framer-motion": "^10.18.0",
     "https": "^1.0.0",
     "immer": "^10.0.3",
+    "input-otp": "^1.2.4",
     "ioredis": "^5.3.2",
     "jose": "^5.1.3",
     "js-yaml": "^4.1.0",
