--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.0.173",
     "lucide-react": "^0.279.0",
+    "luxon": "^3.4.4",
     "marked": "^11.1.0",
     "nanostores": "^0.10.0",
     "next": "^14.0.4",
