--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@ctrl/react-adsense": "^1.7.0",
     "@ducanh2912/next-pwa": "^10.1.0",
     "@hookform/resolvers": "^3.3.2",
+    "@langchain/azure-openai": "^0.0.8",
+    "@langchain/openai": "^0.0.28",
     "@nanostores/react": "^0.7.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
