--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@ducanh2912/next-pwa": "^10.1.0",
     "@hookform/resolvers": "^3.3.2",
     "@langchain/azure-openai": "^0.0.8",
+    "@langchain/community": "^0.0.55",
+    "@langchain/groq": "^0.0.9",
     "@langchain/openai": "^0.0.28",
     "@nanostores/react": "^0.7.1",
     "@radix-ui/react-accordion": "^1.1.2",
