--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^0.0.15",
+    "@ai-sdk/google": "^0.0.15",
+    "@ai-sdk/openai": "^0.0.14",
     "@auth/drizzle-adapter": "^0.3.9",
     "@clerk/nextjs": "^4.25.4",
     "@ctrl/react-adsense": "^1.7.0",
@@ -64,7 +67,7 @@
     "@vercel/otel": "^0.3.0",
     "@vercel/postgres": "^0.5.1",
     "@vitejs/plugin-react": "^4.1.0",
-    "ai": "^2.2.13",
+    "ai": "^3.1.14",
     "bowser": "^2.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
