--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.1",
     "drizzle-zod": "^0.5.1",
+    "embla-carousel-react": "^8.1.3",
     "encoding": "^0.1.13",
     "event-source-polyfill": "^1.0.31",
     "eventsource": "^2.0.2",
