--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "nanostores": "^0.10.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "next-intl": "^3.15.0",
     "next-themes": "^0.2.1",
     "observable-hooks": "^4.2.3",
     "openai": "^4.10.0",
