--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "deploy-server": "dotenv -- npx partykit deploy --domain api.kitchencraft.ai --name kitchencraft-api-prod",
+    "tail-server": "dotenv -- npx partykit tail",
     "generate": "drizzle-kit generate:pg",
     "generate-database-types": "supabase gen types typescript --project-id umxskkqubhkoowxwdrvq --schema public > src/lib/database.types.ts",
     "test": "vitest"
@@ -146,6 +147,7 @@
     "web-push": "^3.6.6",
     "workbox-window": "^7.0.0",
     "xstate": "^5.6.2",
+    "xstate-migrate": "^0.0.2",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.21.4"
   },
